fixing entry-content spacing

--- a/src/less/_site-layout.less
+++ b/src/less/_site-layout.less
@@ -87,10 +87,6 @@
   max-width: @text-max-width;
   margin-left: auto;
   margin-right: auto;
-  & > :first-child {
-    padding-top: 2.5rem;
-    margin-top: 0;
-  }
 }
 
 .entry-content > .wp-block-group.has-background,
